--- a/demo10/Views/Shared/_Layout.cshtml
+++ b/demo10/Views/Shared/_Layout.cshtml
@@ -6,9 +6,8 @@
     <title>@ViewData["Title"] - demo10</title>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> <!-- deneme amaçlı çalışıp çalışmadığını anlamak için-->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/15.5.0/nouislider.min.css" rel="stylesheet"> <!--bu kod-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/15.5.0/nouislider.min.js"></script> <!--ve bu kod -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/demo10.styles.css" asp-append-version="true" />
 </head>
@@ -45,6 +44,9 @@
             &copy; 2024 - demo10 - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-71wAD+bpv5BEuqT3W+5eW/9eXf3WwZbqv0q5mAdf1uUds7KM+4Fg1QFkF2u3RSfS" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/15.5.0/nouislider.min.js"></script> <!--ve bu kod -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/lib/nouislider/nouislider.min.js"></script>
